<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/yourEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelEmail" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/yourPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelPassword" />

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/yourIEMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelIEMI" />

    <TextView
        android:id="@+id/iEMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

</LinearLayout>

